# realworld_backend

./: .env  Cargo.toml  configuration.yaml  init_db.sh
migrations/: 1_accounts.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/api/users/: error.rs  login.rs  mod.rs  registration.rs  token.rs  user.rs
